<resources>
    <string name="app_name" translatable="false">WeatherForecastApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="weather_alarms" translatable="false">Weather Alarms</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="alerts">Alerts</string>
    <string name="favourite">Favourite</string>
    <string name="btn">btn</string>
    <string name="address">Address:</string>
    <string name="image">image</string>
    <string name="favourite_places">Favourite Places</string>
    <string name="start">Start At:</string>
    <string name="end">End At:</string>
    <string name="location">Location</string>
    <string name="map">Map</string>
    <string name="gps">GPS</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="meter_sec">Meter/Sec</string>
    <string name="mile_hour">Mile/hour</string>
    <string name="temperature">Temperature</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string name="feh">Fahrenheit</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="cairo">Cairo</string>
    <string name="mon_nov27_9_04">Mon, Nov27 – 9:04</string>
    <string name="clear_sky">Clear Sky</string>
    <string name="_1_c">1°C</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="fahrenheitUnit">°F</string>
    <string name="celsiusUnit">°C</string>
    <string name="kelvinUnit">°K</string>
    <string name="hPa">hPa</string>
    <string name="wind_unit">Wind</string>
    <string name="title_preferences">Preferences</string>
    <string name="Percent">70 %</string>
    <string name="this_condition_will_continue_to_the_rest_of_the_day">This Condition Will Continue To The Rest Of The Day</string>
    <string name="next_7_days">next 7 Days</string>
    <string name="time">2PM</string>
    <string name="today">Today</string>
    <string name="wind">WIND</string>
    <string name="pressure">PRESSURE</string>
    <string name="humidity">HUMIDITY</string>
    <string name="feelsLike">Feels Like</string>
    <string name="clouds">CLOUDS</string>
    <string name="enter_your_city">Enter your City</string>
    <string name="no_internet">No Internet</string>
    <string name="from">From</string>
    <string name="start_date">Enter Start Date</string>
    <string name="enter_the_start_time">Enter the Start Time</string>
    <string name="to">To</string>
    <string name="enter_end_date">Enter End Date</string>
    <string name="enter_end_time">Enter End Time</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="alarms">Alarms</string>
    <string name="alarm">Alarm</string>
    <string name="notification">Notification</string>
    <string name="required">required</string>
    <string name="you_have_to_select_one">You have to select one of them</string>
    <string name="slould_use_net">You should use INTERNET!!</string>
    <string name="try_later">you can try later</string>
    <string name="continue_fill_data">Continue filling data</string>
    <string name="sure_cancel">Are you sure that you want to cancel?</string>
    <string name="end_date_larger_than_start_date">\" Start Date must  be less than end date \"</string>
    <string name="added">Data is Adde d successfully</string>
    <string name="choose_date">Choose Date</string>
    <string name="place">Place</string>
    <string name="cance_delete">You Cancelled the Deletion Process</string>
    <string name="sure_to_delet">Are you sure that you want to delete this item ?</string>
    <string name="failed_get_data">Failed to get Data try later</string>
    <string name="no_intenrnet">OOPS there is No network Please Turn on WIFI and try later</string>
    <string name="weather_alarm">Weather Alarm</string>
    <string name="channel">alarm channel</string>
    <string name="description">channel description</string>
    <string name="des">description</string>
    <string name="choose_time">Choose Time</string>
</resources>