<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home_black_24dp"
        android:iconTint="@color/white"
        android:title="@string/title_home" />

    <item
        android:id="@+id/favouriteFragment"
        android:icon="@drawable/baseline_bookmark_24"
        android:iconTint="@color/white"
        android:title="@string/favourite" />

    <item
        android:id="@+id/alertsFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:iconTint="@color/white"
        android:title="@string/alerts" />


    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/baseline_settings_24"
        android:iconTint="@color/white"
        android:title="@string/settings" />


</menu>