<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/_8sdp"
    android:paddingEnd="0dp"
    android:background="@color/transparent">

    <TextView
        android:id="@+id/textView_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textColor="@color/navy"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_hour"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginVertical="@dimen/_2sdp"
        android:contentDescription="@string/image"
        android:src="@drawable/ic_cloud_queue_dark"
        app:layout_constraintEnd_toEndOf="@id/textView_time"
        app:layout_constraintStart_toStartOf="@id/textView_time"
        app:layout_constraintTop_toBottomOf="@id/textView_time"
        app:tint="@color/navy" />


    <TextView
        android:id="@+id/textView_degree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:text="@string/_1_c"
        android:textColor="@color/navy"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/textView_time"
        app:layout_constraintEnd_toEndOf="@id/textView_time"
        app:layout_constraintTop_toBottomOf="@id/image_hour" />

</androidx.constraintlayout.widget.ConstraintLayout>