<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/_4sdp"
        android:paddingStart="@dimen/_4sdp"
        android:paddingEnd="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textview_itemDay_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/today"
            android:textColor="@color/navy"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/image_itemDay_icon"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginEnd="@dimen/_4sdp"
            android:contentDescription="@string/image"
            android:src="@drawable/cloudy" />


        <TextView
            android:id="@+id/textview_itemDay_minDegree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_4sdp"
            android:text="@string/_1_c"
            android:textColor="@color/navy"
            android:textSize="@dimen/_12ssp"
            android:textStyle="normal"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textview_itemDay_maxDegree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:layout_marginHorizontal="@dimen/_4sdp"
            android:text="@string/_1_c"
            android:textColor="@color/navy"
            android:textSize="@dimen/_12ssp"
            android:textStyle="normal"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textview_itemDay_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:text="@string/clear_sky"
            android:textColor="@color/navy"
            android:textSize="@dimen/_12ssp"
            android:textStyle="normal" />
    </LinearLayout>

    <View
        android:id="@+id/line3"
        android:layout_width="0dp"
        android:layout_height="0.6dp"
        android:layout_marginTop="@dimen/_4sdp"
        android:background="@color/navy2"
        app:layout_constraintEnd_toEndOf="@id/linear"
        app:layout_constraintStart_toStartOf="@id/linear"
        app:layout_constraintTop_toBottomOf="@id/linear" />

</androidx.constraintlayout.widget.ConstraintLayout>