<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.alerts.view.AlertsFragment">


    <ImageView
        android:id="@+id/alertsImage"
        android:layout_width="@dimen/_230sdp"
        android:layout_height="@dimen/_160sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_8sdp"
        android:contentDescription="@string/image"
        android:src="@drawable/ic_undraw_season_change" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/alerts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:background="@drawable/bottom_navigation_back_ground"
            android:backgroundTint="@color/baby_blue"
            android:fontFamily="@font/armata"
            android:gravity="center"
            android:paddingVertical="@dimen/_4sdp"
            android:text="@string/alerts"
            android:textColor="@color/navy"
            android:textSize="@dimen/_24sdp"
            android:textStyle="italic|bold"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_add_alerts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_50sdp"
            android:backgroundTint="@color/baby_blue"
            android:contentDescription="@string/btn"
            android:elevation="@dimen/_16sdp"
            android:focusable="true"
            android:padding="@dimen/_16sdp"
            android:src="@drawable/baseline_add_alert_24"
            android:tint="@android:color/white"
            app:fabSize="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh_layout_alerts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_75sdp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_alerts"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:orientation="vertical"
                    tools:listitem="@layout/item_alert"
                    app:layout_constraintTop_toBottomOf="@id/guideline" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="@dimen/_60sdp" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>