<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_16sdp"
    android:backgroundTint="@color/haf_trans3"
    android:elevation="@dimen/_16sdp"
    app:cardCornerRadius="@dimen/_32sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/haf_trans3"
        android:paddingVertical="@dimen/_16sdp">

        <TextView
            android:id="@+id/startAt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_4sdp"
            android:paddingHorizontal="@dimen/_8sdp"
            android:text="@string/start"
            android:textColor="@color/text_white"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold|italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:textColor="@color/text_white"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintBottom_toBottomOf="@id/startAt"
            app:layout_constraintStart_toEndOf="@id/startAt"
            app:layout_constraintTop_toTopOf="@id/startAt"
            tools:text="@string/start" />


        <TextView
            android:id="@+id/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_4sdp"
            android:paddingHorizontal="@dimen/_8sdp"
            android:text="@string/place"
            android:textColor="@color/text_white"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold|italic"
            app:layout_constraintStart_toStartOf="@id/startAt"
            app:layout_constraintTop_toBottomOf="@id/endAt" />

        <TextView
            android:id="@+id/textView_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:textColor="@color/text_white"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintStart_toEndOf="@id/city"
            app:layout_constraintTop_toTopOf="@id/city"
            tools:text="@string/start" />


        <TextView
            android:id="@+id/endAt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:paddingHorizontal="@dimen/_6sdp"
            android:text="@string/end"
            android:textColor="@color/text_white"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold|italic"
            app:layout_constraintStart_toStartOf="@id/startAt"
            app:layout_constraintTop_toBottomOf="@id/textView_start_date" />

        <TextView
            android:id="@+id/textView_end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:text="@string/start"
            android:textColor="@color/text_white"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintBottom_toBottomOf="@id/endAt"
            app:layout_constraintStart_toEndOf="@id/endAt"
            app:layout_constraintTop_toTopOf="@id/endAt" />

        <ImageView
            android:id="@+id/image_alert"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:contentDescription="@string/image"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btn_delete"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:contentDescription="@string/image"
            android:src="@drawable/delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/verticalBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="right"
            app:constraint_referenced_ids="image_alert" />


        <View
            android:layout_width="@dimen/_1sdp"
            android:layout_height="0dp"
            android:background="@color/text_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/image_alert"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>